# llmops-multi-document-chatbot

./: README.md  main.py  pyproject.toml
notebook/: RAG.ipynb  experiments.ipynb
