[project]
name = "llmops-prjt"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "ipykernel>=7.3.0",
    "langchain>=1.3.11",
    "langchain-community>=0.4.2",
    "notebook>=7.6.0",
    "openai>=2.44.0",
    "python-dotenv>=1.2.2",
    "rapidocr-onnxruntime>=1.4.4",
    "tiktoken>=0.13.0",
]
